# nhsdigital.eps-repo-status

./: .flake8  .gitallowed  .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  _config.yml  index.html  language_versions.html  pyproject.toml  release_status.html  repo_status.html  repos.json  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build_gh_pages.yml  pull_request.yml  release.yml  sync_copilot.yml  update_dev_container_version.yml  update_repo_status.yml  update_repo_status_data.yml
_data/: repo_status.json
assets/: main.scss
release_notes/: v1.0.23.md  v1.0.24.md  v1.0.27.md  v1.0.30.md  v1.0.31.md  v1.0.32.md  v1.0.33.md  v1.0.35.md  v1.0.39.md  v1.0.41.md  v1.0.42.md  v1.0.44.md  v1.0.48.md  v1.0.50.md  v1.0.51.md  v1.0.53.md  v1.0.54.md  v1.0.57.md  v1.0.59.md  v1.0.62.md  v1.0.63.md  v1.0.65.md  v1.1.0.md
scripts/: run_repo_status.py  setup_github_repos.py
